--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,9 @@
 set -g prefix C-a
 unbind C-b
 
+set-option -g default-shell "/usr/local/bin/fish"
+set -g default-command "/usr/local/bin/fish"
+
 bind | split-window -h
 bind - split-window -v
 
