update: Update Brewfile

--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -6,16 +6,27 @@ brew "asdf"
 brew "fish"
 brew "fisher"
 brew "git"
+brew "hugo"
+brew "jq"
+brew "neovim", args: ["HEAD"]
 brew "nkf"
 brew "ranger"
 brew "stow"
 brew "tmux"
+brew "yarn"
+cask "adobe-acrobat-reader"
 cask "alacritty"
 cask "appcleaner"
 cask "aquaskk"
+cask "astah-professional"
 cask "chromium"
+cask "devtoys"
 cask "firefox-developer-edition"
 cask "gimp"
+cask "google-chrome"
 cask "inkscape"
+cask "keyboardcleantool"
 cask "openinterminal"
+cask "raycast"
 cask "rectangle"
+cask "slidepilot"
