--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,30 +3,40 @@ tap "homebrew/cask"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 brew "asdf"
+brew "cocoapods"
+brew "ffmpeg"
 brew "fish"
 brew "fisher"
 brew "git"
 brew "hugo"
 brew "jq"
+brew "latexindent"
 brew "neovim", args: ["HEAD"]
 brew "nkf"
 brew "ranger"
 brew "stow"
 brew "tmux"
+brew "tree"
 brew "yarn"
+brew "yt-dlp"
 cask "adobe-acrobat-reader"
 cask "alacritty"
 cask "appcleaner"
 cask "aquaskk"
 cask "astah-professional"
+cask "audacity"
 cask "chromium"
 cask "devtoys"
 cask "firefox-developer-edition"
 cask "gimp"
+cask "goneovim"
 cask "google-chrome"
 cask "inkscape"
 cask "keyboardcleantool"
+cask "mactex-no-gui"
 cask "openinterminal"
 cask "raycast"
 cask "rectangle"
 cask "slidepilot"
+cask "soundflower"
+cask "vlc"
