--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -10,3 +10,8 @@
 	# gpgsign = true
 [init]
 	defaultBranch = main
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
