--- a/editorconfig/.editorconfig
+++ b/editorconfig/.editorconfig
@@ -8,7 +8,8 @@ indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.java]
+[{*.java,Makefile}]
+indent_size = 2
 indent_style = tab
 
 [*.md]
