--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -2,7 +2,10 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
+tap "imas/rdflint"
+tap "ngrok/ngrok"
 brew "asdf"
+brew "bitwarden-cli"
 brew "cloc"
 brew "cmatrix"
 brew "cocoapods"
@@ -19,6 +22,7 @@ brew "mas"
 brew "neofetch"
 brew "neovim", args: ["HEAD"]
 brew "nkf"
+brew "pandoc"
 brew "ranger"
 brew "sl"
 brew "stow"
@@ -27,12 +31,15 @@ brew "tree"
 brew "websocat"
 brew "yarn"
 brew "yt-dlp"
+brew "imas/rdflint/rdflint"
 cask "adobe-acrobat-reader"
 cask "alacritty"
+cask "another-redis-desktop-manager"
 cask "appcleaner"
 cask "aquaskk"
 cask "astah-professional"
 cask "audacity"
+cask "calibre"
 cask "chromium"
 cask "db-browser-for-sqlite"
 cask "devtoys"
@@ -40,10 +47,13 @@ cask "firefox-developer-edition"
 cask "gimp"
 cask "goneovim"
 cask "google-chrome"
+cask "hyperswitch"
 cask "inkscape"
 cask "keyboardcleantool"
 cask "mactex-no-gui"
 cask "mos"
+cask "mu-editor"
+cask "ngrok"
 cask "openinterminal"
 cask "postman"
 cask "processing"
@@ -57,6 +67,7 @@ mas "Amphetamine", id: 937984704
 mas "BetterSnapTool", id: 417375580
 mas "CotEditor", id: 1024640650
 mas "GarageBand", id: 682658836
+mas "GoodNotes", id: 1444383602
 mas "Hidden Bar", id: 1452453066
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
