feat: Remove plugin settings; Keybind changes to like vim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,12 +40,14 @@ set -g base-index 1
 
 set-option -g mouse on
 
-# tmux plugin list
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-spotify-info'
+set-window-option -g mode-keys vi
 
-run '~/.tmux/plugins/tpm/tpm'
+# tmux plugin list
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-open'
+# set -g @plugin 'tmux-spotify-info'
+
+# run '~/.tmux/plugins/tpm/tpm'
