feat: Add some tmux plugin and setup they

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,12 +28,17 @@ set-option -g status-position top
 
 setw -g status-style fg=colour255,bg=colour234
 
-set -g status-left "<- + Shift"
-set -g status-right "Shift + ->"
+set -g @forecast-format "%c"+"%C"+"%t"
+set -g @forecast-language "ja"
+set -g @forecast-cache-duration 3600 # 1 hour
+
+set -g status-left  "%Y-%m-%d "
+set -g status-right "#{forecast}"
 
 set -g status-justify centre
 
-setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix,#[bg=colour3],} #I #W '
+# '#{?client_prefix,<When Prefix hit>,<Else>}'
+setw -g window-status-current-format '#[bg=colour28,fg=colour255]#{?client_prefix,#[bg=colour11],} #I #W '
 setw -g window-status-format '#[fg=colour242] #I #W '
 
 set -g base-index 1
@@ -42,12 +47,15 @@ set-option -g mouse on
 
 set-window-option -g mode-keys vi
 
-# tmux plugin list
-# set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
+# tpm (tmux plugin manager) plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
-# set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-spotify-info'
+# set -g @plugin 'erikw/tmux-powerline'
+set -g @plugin 'aaronpowell/tmux-weather'
 
-# run '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
+
