style: Change order of lines

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,8 @@ unbind C-b
 set-option -g default-shell "/usr/local/bin/fish"
 set -g default-command "/usr/local/bin/fish"
 
+set-window-option -g mode-keys vi
+
 bind | split-window -h
 bind - split-window -v
 
@@ -21,33 +23,25 @@ bind -r L resize-pane -R 5
 bind -n S-left previous-window
 bind -n S-right next-window
 
+# Enable to sync-input prefix+e
+bind e if-shell -F "#{==:#{pane_synchronized},0}" "set synchronize-panes on" "set synchronize-panes off"
+
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
-
-set-option -g status-position top
-
 setw -g status-style fg=colour255,bg=colour234
 
-set -g @forecast-format "%c"+"%C"+"%t"
-set -g @forecast-language "ja"
-set -g @forecast-cache-duration 3600 # 1 hour
-
-set -g status-left  "%Y-%m-%d "
-set -g status-right "#{forecast}"
-
-set -g status-justify centre
+set -g base-index 1
+set-option -g mouse on
+set -g status-justify left
+set-option -g status-position top
 
 # '#{?client_prefix,<When Prefix hit>,<Else>}'
 setw -g window-status-current-format '#[bg=colour28,fg=colour255]#{?client_prefix,#[bg=colour11],} #I #W '
 setw -g window-status-format '#[fg=colour242] #I #W '
 
-set -g base-index 1
+set -g status-left  "%Y-%m-%d |"
+set -g status-right "#{forecast}"
 
-set-option -g mouse on
-
-set-window-option -g mode-keys vi
-
-# tpm (tmux plugin manager) plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
@@ -56,6 +50,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-spotify-info'
 # set -g @plugin 'erikw/tmux-powerline'
 set -g @plugin 'aaronpowell/tmux-weather'
+
+set -g @forecast-format "%c"+"%C"+"%t"
+set -g @forecast-language "ja"
+set -g @forecast-cache-duration 3600 # 1 hour
 
 run '~/.tmux/plugins/tpm/tpm'
 
