--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -1,70 +1,116 @@
+tap "gcenx/wine"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "imas/rdflint"
 tap "ngrok/ngrok"
+tap "voicevox/voicevox"
+tap "ynqa/tap"
+brew "xz"
 brew "asdf"
-brew "bitwarden-cli"
+brew "pcre2"
+brew "cairo"
 brew "cloc"
 brew "cmatrix"
 brew "cocoapods"
+brew "doxygen"
+brew "exiftool"
 brew "ffmpeg"
 brew "fish"
 brew "fisher"
+brew "gcc"
+brew "gdb"
 brew "git"
 brew "git-lfs"
+brew "gnuplot"
 brew "gotop"
 brew "hugo"
+brew "imagemagick"
 brew "jq"
 brew "latexindent"
+brew "libxt"
+brew "lpeg"
+brew "lrzsz"
 brew "mas"
 brew "neofetch"
 brew "neovim", args: ["HEAD"]
 brew "nkf"
+brew "openjdk"
 brew "pandoc"
+brew "poetry"
+brew "poppler"
+brew "pygments"
+brew "qpdf"
+brew "r"
 brew "ranger"
+brew "redpen"
+brew "rlwrap"
 brew "sl"
 brew "stow"
 brew "tmux"
 brew "tree"
 brew "websocat"
+brew "winetricks"
 brew "yarn"
 brew "yt-dlp"
 brew "imas/rdflint/rdflint"
+brew "ynqa/tap/jnv"
 cask "adobe-acrobat-reader"
 cask "alacritty"
 cask "another-redis-desktop-manager"
 cask "appcleaner"
 cask "aquaskk"
+cask "arduino-ide"
 cask "astah-professional"
 cask "audacity"
+cask "blender@lts"
 cask "calibre"
 cask "chromium"
 cask "db-browser-for-sqlite"
-cask "devtoys"
-cask "firefox-developer-edition"
+cask "drawio"
+cask "firefox@developer-edition"
 cask "gimp"
 cask "goneovim"
 cask "google-chrome"
-cask "hyperswitch"
+cask "idafree"
 cask "inkscape"
+cask "jd-gui"
 cask "keyboardcleantool"
+cask "keycastr"
+cask "latexit"
+cask "libreoffice"
+cask "libreoffice-language-pack", args: { language: "ja" }
 cask "mactex-no-gui"
+cask "min"
 cask "mos"
 cask "mu-editor"
 cask "ngrok"
+cask "notion-calendar"
+cask "obs"
+cask "obsidian"
 cask "openinterminal"
 cask "postman"
 cask "processing"
+cask "quickwhisper"
 cask "raycast"
 cask "rectangle"
+cask "rstudio"
+cask "screen-studio"
+cask "skim"
 cask "slidepilot"
 cask "soundflower"
+cask "stats"
+cask "thunderbird"
+cask "unity-hub"
+cask "utm"
 cask "vlc"
+cask "voicevox"
+cask "wine-crossover"
+cask "wireshark"
+cask "xquartz"
 mas "Alfred", id: 405843582
 mas "Amphetamine", id: 937984704
 mas "BetterSnapTool", id: 417375580
+mas "Bitwarden", id: 1352778147
 mas "CotEditor", id: 1024640650
 mas "GarageBand", id: 682658836
 mas "GoodNotes", id: 1444383602
@@ -80,3 +126,53 @@ mas "Skitch", id: 425955336
 mas "Slack", id: 803453959
 mas "Todoist", id: 585829637
 mas "Xcode", id: 497799835
+vscode "1yib.rust-bundle"
+vscode "arjun.swagger-viewer"
+vscode "atsushieno.language-review"
+vscode "corschenzi.mermaid-graphical-editor"
+vscode "csstools.postcss"
+vscode "dart-code.dart-code"
+vscode "dart-code.flutter"
+vscode "donjayamanne.githistory"
+vscode "dustypomerleau.rust-syntax"
+vscode "editorconfig.editorconfig"
+vscode "fill-labs.dependi"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "golang.go"
+vscode "ionutvmi.path-autocomplete"
+vscode "james-yu.latex-workshop"
+vscode "jebbs.plantuml"
+vscode "kevinkyang.auto-comment-blocks"
+vscode "mhutchie.git-graph"
+vscode "ms-azuretools.vscode-docker"
+vscode "ms-ceintl.vscode-language-pack-ja"
+vscode "ms-python.debugpy"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode-remote.remote-containers"
+vscode "ms-vscode-remote.remote-ssh"
+vscode "ms-vscode-remote.remote-ssh-edit"
+vscode "ms-vscode-remote.remote-wsl"
+vscode "ms-vscode-remote.vscode-remote-extensionpack"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.hexeditor"
+vscode "ms-vscode.remote-explorer"
+vscode "ms-vscode.remote-server"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "ms-vsliveshare.vsliveshare-pack"
+vscode "redhat.vscode-yaml"
+vscode "rust-lang.rust-analyzer"
+vscode "saikou9901.evilinspector"
+vscode "shanejarvie.hybrid-theme"
+vscode "shardulm94.trailing-spaces"
+vscode "shufo.vscode-blade-formatter"
+vscode "taichi.vscode-textlint"
+vscode "vscodevim.vim"
+vscode "vue.volar"
+vscode "yzhang.markdown-all-in-one"
