feat(tmux): Use powerline in window tab

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,23 +32,27 @@ setw -g status-style fg=colour255,bg=colour234
 
 set -g base-index 1
 set-option -g mouse on
-set -g status-justify left
+set -g status-justify centre
 set-option -g status-position top
 
-# '#{?client_prefix,<When Prefix hit>,<Else>}'
-setw -g window-status-current-format '#[bg=colour28,fg=colour255]#{?client_prefix,#[bg=colour11],} #I #W '
-setw -g window-status-format '#[fg=colour242] #I #W '
+# MEMO: A way to change how it show when prefix-key pressed is:
+# #{?client_prefix,<When Prefix hit>,<Else>}
 
-set -g status-left  "%Y-%m-%d |"
+# MEMO: Below settings are depending powerline fonts
+#       Settings are little bit complex, I wrote comment for its mean
+# left arrow : #[bg=colour234,fg=colour28]#{?client_prefix,#[fg=colour11],}
+# middle     : #[bg=colour28,fg=colour255]#{?client_prefix,#[bg=colour11],} #I #W
+# right arrow: #[bg=colour234,fg=colour28]#{?client_prefix,#[bg=colour11],}
+setw -g window-status-current-format '#[bg=colour28,fg=colour234]#{?client_prefix,#[bg=colour11],}#[bg=colour28,fg=colour255]#{?client_prefix,#[bg=colour11],} #I #W #[bg=colour234,fg=colour28]#{?client_prefix,#[fg=colour11],}'
+
+setw -g window-status-format '#[fg=colour242] #I #W '
+
+set -g status-left  "%Y-%m-%d"
 set -g status-right "#{forecast}"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'tmux-plugins/tmux-open'
-# set -g @plugin 'tmux-spotify-info'
-# set -g @plugin 'erikw/tmux-powerline'
 set -g @plugin 'aaronpowell/tmux-weather'
 
 set -g @forecast-format "%c"+"%C"+"%t"
