feat(tmux): Change some settings disable and MEMO translate to Japanese

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 set -g prefix C-a
 unbind C-b
 
-set-option -g default-shell "/usr/local/bin/fish"
-set -g default-command "/usr/local/bin/fish"
+# set-option -g default-shell "/usr/local/bin/fish"
+# set -g default-command "/usr/local/bin/fish"
 
 set-window-option -g mode-keys vi
 
@@ -35,29 +35,30 @@ set-option -g mouse on
 set -g status-justify centre
 set-option -g status-position top
 
-# MEMO: A way to change how it show when prefix-key pressed is:
-# #{?client_prefix,<When Prefix hit>,<Else>}
+# MEMO: prefix-keyが押されたときとそうでない状態で色を変更する方法:
+# #{?client_prefix,<押されたとき>,<そうでないとき>}
 
-# MEMO: Below settings are depending powerline fonts
-#       Settings are little bit complex, I wrote comment for its mean
-# left arrow : #[bg=colour234,fg=colour28]#{?client_prefix,#[fg=colour11],}
-# middle     : #[bg=colour28,fg=colour255]#{?client_prefix,#[bg=colour11],} #I #W
-# right arrow: #[bg=colour234,fg=colour28]#{?client_prefix,#[bg=colour11],}
+# MEMO: 次の設定はPowerlineを使用している
+#       設定の意図がわかりづらいので、コメントに残す
+# 左矢印 : #[bg=colour234,fg=colour28]#{?client_prefix,#[fg=colour11],}
+# 中央   : #[bg=colour28,fg=colour255]#{?client_prefix,#[bg=colour11],} #I #W
+# 右矢印 : #[bg=colour234,fg=colour28]#{?client_prefix,#[bg=colour11],}
 setw -g window-status-current-format '#[bg=colour28,fg=colour234]#{?client_prefix,#[bg=colour11],}#[bg=colour28,fg=colour255]#{?client_prefix,#[bg=colour11],} #I #W #[bg=colour234,fg=colour28]#{?client_prefix,#[fg=colour11],}'
 
 setw -g window-status-format '#[fg=colour242] #I #W '
 
 set -g status-left  "%Y-%m-%d"
-set -g status-right "#{forecast}"
+# set -g status-right "#{forecast}"
+set -g status-right ""
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'aaronpowell/tmux-weather'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'aaronpowell/tmux-weather'
 
-set -g @forecast-format "%c"+"%C"+"%t"
-set -g @forecast-language "ja"
-set -g @forecast-cache-duration 3600 # 1 hour
+# set -g @forecast-format "%c"+"%C"+"%t"
+# set -g @forecast-language "ja"
+# set -g @forecast-cache-duration 3600 # 1 hour
 
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
 
